Corrected the trial session logic API